# oljefondsvokteren

./: .gitignore  .gitlab-ci.yml  README.md  gemini_stuff.md  main.py  pyproject.toml  test_gem.py  validateAksa.js
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: .dockerignore  404.html  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/nginx/: default.conf.template
frontend/public/: mel.json  melexis-report.html
frontend/public/data/: investment.schema.json  investments.json  test.json
frontend/public/full-reports/: melexis-nv.html
frontend/public/reports/: aarti-industries-ltd.md  aksa-akrilik-kimya-sanayii-as.md  melexis-nv.md
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/components/: CategoryBadge.tsx
frontend/src/contexts/: CompanyDataContext.tsx
frontend/src/hooks/: useCompanyData.ts  useOverviewStats.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: CompaniesPage.tsx  CompanyDetailPage.tsx  CompanyFullReport.tsx  CompanyFullReportPage.tsx  DetailedCompanyView.tsx  (+2 more)
scripts/: EQ_2025_06_30_Industry.csv  README.md  create_base_investments.py  create_shallow_investments.py  example_investments.json  export_from_datastore.py  full.schema.json  import_to_firestore.py  investment.schema.json  investments.json  prompt.txt  pyproject.toml  query_investments.py  reset_datastore.py  shallow.schema.json  sync_deep_reports.py  test_script.py  vertex_functions.py  vertex_schema.py
(+24 files in other folders)
