[project]
name = "oljefondet-vakten"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "google-cloud-datastore>=2.21.0",
    "jsonschema>=4.25.0",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "scripts",
]
